// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with different props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid green;
  text-align: center;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

.emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid green;
  text-align: center;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

<div
    class="emotion-0"
    data-testid="caution"
  />
</DocumentFragment>
`;

exports[`Renders without error 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid rgba(218,165,32,1);
  text-align: center;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

.emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid rgba(218,165,32,1);
  text-align: center;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
